# raylib-vcpkg-vscode-starter-template

./: CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
